--- a/cvmfstech.tex
+++ b/cvmfstech.tex
@@ -41,7 +41,7 @@
 
 \begin{document}
 \selectlanguage{english}
-\renewcommand\today{December 2013}
+\renewcommand\today{April 2014}
 
 \pagestyle{empty}
 \begin{titlepage}
@@ -71,7 +71,7 @@
 		
 		\includegraphics[height=4cm]{figures/cvmfs}\\[1.5cm]
   
-		\large Jakob Blomer \qquad Predrag Buncic \qquad Ren\'e Meusel\\[0.4cm]
+		\large Jakob Blomer \qquad Predrag Buncic \qquad Dave Dykstra \qquad Ren\'e Meusel\\[0.4cm]
 		\url{jblomer@cern.ch}
 		%\today
   
