--- a/cpt-repo.tex
+++ b/cpt-repo.tex
@@ -312,7 +312,7 @@ Restructuring the repository's directory tree is an expensive operation in CernV
 Moreover, it can easily break client applications when they switch to a restructured file system snapshot. 
 Therefore, your software directory tree layout should be relatively stable before you start filling the CernVM-FS repository.
 
-\subsection{Managing nested catalogs with \texttt{.cvmfsdirtab}}
+\subsection{Managing Nested Catalogs with \texttt{.cvmfsdirtab}}
 Rather than managing \texttt{.cvmfscatalog} files by hand, a repository administrator may create a file called \texttt{.cvmfsdirtab}, in the top directory of the repository, which contains a list of paths relative to the top of the repository where \texttt{.cvmfscatalog} files will be created. 
 Those paths may contain shell wildcards such as asterisk (\texttt{*}) and question mark (\texttt{?}).
 This is useful for specifying patterns for creating nested catalogs as new files are installed. 
