FIX: `cvmfs_server lstags` -> `list-tags`

--- a/cpt-repo.tex
+++ b/cpt-repo.tex
@@ -223,7 +223,7 @@ cvmfs_server publish -a release-1.0
 As a tag name, use an identifier without spaces and special characters. 
 You can list all named snapshots by 
 \begin{verbatim}
-cvmfs_server lstags
+cvmfs_server list-tags
 \end{verbatim}
 
 In order to remove (unpublish) a named snapshot, use the -r option like
