--- a/figures/tabserveranatomy.tex
+++ b/figures/tabserveranatomy.tex
@@ -4,6 +4,11 @@
 	\toprule
 	{\bf\centering File Path} & {\bf\centering Description} \\
 	\midrule
+
+	\texttt{/cvmfs} & \textbf{Repository mount points} \newline
+	Contains read-only \aufs\ mountpoints that become writable during repository updates. Don't symlink or manually mount anything here. \\
+	\addlinespace
+
 	\texttt{/srv/cvmfs} & \textbf{Central repository storage location} \newline
 	Can be mounted or symlinked to somewhere else \emph{before} creating the first repository. \\
 	\addlinespace
