FIX: spacing/linebreak typo

--- a/figures/tabserveranatomy.tex
+++ b/figures/tabserveranatomy.tex
@@ -18,7 +18,8 @@
 	\addlinespace
 
 	\texttt{/var/spool/cvmfs} & \textbf{Internal states of the repositories} \newline
-	Can be mounted or symlinked to somewhere else \emph{before} creating the first repository. Hosts the scratch area described in Section~\ref{sct:repoupdate} thus might consume notable disk space during repository updates. \\			\addlinespace
+	Can be mounted or symlinked to somewhere else \emph{before} creating the first repository. Hosts the scratch area described in Section~\ref{sct:repoupdate} thus might consume notable disk space during repository updates. \\
+	\addlinespace
 
 	\texttt{/etc/cvmfs} & \textbf{Configuration files and keychains} \newline
 	Similar to the structure described in Table~\ref{tbl:configfiles}. Please don't symlink this directory. \\
