--- a/cpt-repo.tex
+++ b/cpt-repo.tex
@@ -23,9 +23,9 @@ Figure~\ref{fig:installwebserver} outlines the process of publishing a repositor
 
 \begin{figure}[h]
 	\includegraphics[width=\textwidth]{figures/update_process.png}
-	\caption{Updating a mounted \cvmfs\ repository by overlaying it with a copy-on-write \aufs\ volume. 
-		Any changes will be accumulated in a writable volume (yellow) and can be synchronized into the \cvmfs\ repository afterwards. 
-		The file catalog contains the directory structure as well as file metadata, symbolic links, and secure hash keys of regular files. 
+	\caption{Updating a mounted \cvmfs\ repository by overlaying it with a copy-on-write \aufs\ volume.
+		Any changes will be accumulated in a writable volume (yellow) and can be synchronized into the \cvmfs\ repository afterwards.
+		The file catalog contains the directory structure as well as file metadata, symbolic links, and secure hash keys of regular files.
 		Regular files are compressed and renamed to their cryptographic content hash before copied into the data store.}
 	\label{fig:installwebserver}
 \end{figure}
@@ -76,7 +76,7 @@ A new repository is created by \texttt{cvmfs\_server mkfs}:
   cvmfs_server mkfs my.repo.name
 \end{verbatim}
 The utility will then ask you for a user that should act as the owner of the repository and afterwards create all the infrastructure for the new \cvmfs\ repository.
-Additionally it will create a reasonable default configuration and generate a new release manager certificate and software signing key. 
+Additionally it will create a reasonable default configuration and generate a new release manager certificate and software signing key.
 You'll have to distribute the public key in \texttt{/etc/cvmfs/keys/my.repo.name.pub} to all your client machines.
 The \texttt{cvmfs\_server} utility will use \texttt{/srv/cvmfs} as storage location.
 In case you want to use a separate hard disk, you should mount it there upfront or create a symlink.
@@ -92,6 +92,49 @@ Repositories can be flagged as containing \emph{volatile} files using the \textt
 \end{verbatim}
 When \cvmfs\ clients perform a cache cleanup, they treat files from volatile repositories with priority.
 Such volatile repositories can be useful, for instance, for experiment conditions data.
+
+\subsubsection{S3 Compatible Storage Systems}
+
+The \cvmfs\ can store files directly to S3 compatible storage
+systems, such as Amazon S3, Huawei UDS and OpenStack SWIFT. The S3 storage
+settings are given as parameter to \texttt{cvmfs\_server mkfs}:
+\begin{verbatim}
+  cvmfs_server mkfs -u S3,/my/tmp/dir,myprefix@mys3.conf \
+    -w http://my.s3.storage:PORT/myprefix my.repo.name
+\end{verbatim}
+
+The ``/my/tmp/dir'' is a directory where files are stored temporarily
+before being uploaded, e.g. /tmp/. The ``myprefix'' is a prefix,
+e.g. ``data'' or ``test'', that is added in front of each uploaded
+filename. This prefix can be used to separate repositories if multiple
+repositories are using the same S3 buckets. The ``mys3.conf'' is
+configuration file that defines S3 settings, see the list in
+Table~\ref{tbl:s3confparameters}. The ``-w'' option is used define a
+S3 server URL, e.g. http://localhost:3128, which is used for
+downloading files. Note that this URL can be different than the S3
+server address that is used for uploads, e.g. if a proxy server is
+deployed in front of the server.
+
+\LTXtable{\textwidth}{figures/tabs3confparameters.tex}
+
+In addition, if the S3 backend is configured to use multiple accounts or buckets,
+a proxy server is needed to map HTTP requests to correct buckets.
+This mapping is needed because \cvmfs\ does not support buckets but assumes
+that all files are stored in a flat namespace. The recommendation is to use Squid proxy
+server (version $\geq 3.1.10$). The squid.conf might look e.g. like this:
+\begin{verbatim}
+http_access allow all
+http_port 127.0.0.1:3128 intercept
+cache_peer swift.cern.ch parent 80 0 no-query originserver
+url_rewrite_program /usr/bin/s3_squid_rewrite.py
+cache deny all
+\end{verbatim}
+
+The bucket mapping logic is implemented in s3\_squid\_rewrite.py file. This python script needs to read requests from stdin and write mapped URLs to stdout, e.g.:
+\begin{verbatim}
+in: http://localhost:3128/data/.cvmfswhitelist
+out: http://swift.cern.ch/cernbucket-9-91/data/.cvmfswhitelist
+\end{verbatim}
 
 \subsection{Repository Update}
 \label{sct:repoupdateprocedure}
@@ -194,15 +237,15 @@ You might consult the example script located at \texttt{cvmfs/cvmfs\_server\_hoo
 
 \section{Maintaining a CernVM-FS Repository}
 
-\cvmfs\ is a versioning, snapshot-based file system. 
-Similar to versioning systems, changes to /cvmfs/\dots are temporary until they are committed (\texttt{cvmfs\_server publish}) or discarded (\texttt{cvmfs\_server abort}). 
+\cvmfs\ is a versioning, snapshot-based file system.
+Similar to versioning systems, changes to /cvmfs/\dots are temporary until they are committed (\texttt{cvmfs\_server publish}) or discarded (\texttt{cvmfs\_server abort}).
 That allows you to test and verify your changes, for instance to test a newly installed release before publishing it to clients.
-Whenever changes are published (committed), a new file system snapshot of the current state is created. 
-These file system snapshots can be tagged with a name, which makes them \emph{named snapshots}. 
-A named snapshot is meant to stay in the file system. 
+Whenever changes are published (committed), a new file system snapshot of the current state is created.
+These file system snapshots can be tagged with a name, which makes them \emph{named snapshots}.
+A named snapshot is meant to stay in the file system.
 You can rollback to named snapshots and you can, on the client side, decide to mount any of the named snapshots in lieu of the newest available snapshot.
 
-Two named snapshots are managed automatically by \cvmfs, \texttt{trunk} and \texttt{trunk-previous}. 
+Two named snapshots are managed automatically by \cvmfs, \texttt{trunk} and \texttt{trunk-previous}.
 This allows for easy unpublishing of a mistake, by rolling back to the \texttt{trunk-previous} tag.
 
 \subsection{Check Integrity}
@@ -222,7 +265,7 @@ However this is a time consuming process and we recommend it only for diagnostic
 
 \subsection{Manage Named Snapshots}
 
-At the point of publishing, the resulting snapshot can be named. 
+At the point of publishing, the resulting snapshot can be named.
 To do so, use the -a option like
 \begin{verbatim}
 cvmfs_server transaction
@@ -230,8 +273,8 @@ cvmfs_server transaction
 cvmfs_server publish -a release-1.0
 \end{verbatim}
 
-As a tag name, use an identifier without spaces and special characters. 
-You can list all named snapshots by 
+As a tag name, use an identifier without spaces and special characters.
+You can list all named snapshots by
 \begin{verbatim}
 cvmfs_server list-tags
 \end{verbatim}
@@ -243,13 +286,13 @@ cvmfs_server publish -r release-1.0
 \end{verbatim}
 
 Use named snapshots whenever you do larger modifications to the repository, for instance when you install a new major software release.
-Only with named snapshots do you have the ability to easily undo modifications and to preserve the state of the file system for the future. 
-Nevertheless, do not use named snapshots excessively. 
+Only with named snapshots do you have the ability to easily undo modifications and to preserve the state of the file system for the future.
+Nevertheless, do not use named snapshots excessively.
 Start cleaning up unnecessary snapshots once you have more than $\approx 50$.
 
 \subsection{Rollbacks}
 
-You can rollback your repository to any of the named snapshots. 
+You can rollback your repository to any of the named snapshots.
 Technically, this means that the given snapshot is re-published, while all intermediate snapshots are removed from the history.
 
 In order to rollback, do
@@ -258,20 +301,20 @@ cvmfs_server transaction
 cvmfs_server rollback -t release-1.0
 \end{verbatim}
 
-A rollback is, like restoring from backups, not something you would do often. 
-Use caution. 
+A rollback is, like restoring from backups, not something you would do often.
+Use caution.
 A rollback is irreversible.
 
 \subsection{Manage Nested Catalogs}
 
-\cvmfs\ stores meta-data (path names, file sizes, \dots) in file catalogs. 
-When a client accesses a repository, it has to download the file catalog first and then it downloads the files as they are opened. 
-A single file catalog for an entire repository can quickly become large and impractical. 
-Also, clients typically do not need all of the repository's meta-data at the same time. 
+\cvmfs\ stores meta-data (path names, file sizes, \dots) in file catalogs.
+When a client accesses a repository, it has to download the file catalog first and then it downloads the files as they are opened.
+A single file catalog for an entire repository can quickly become large and impractical.
+Also, clients typically do not need all of the repository's meta-data at the same time.
 For instance, clients using software release 1.0 do not need to know about the contents of software release 2.0.
 
-With nested catalogs, \cvmfs\ has a mechanism to partition the directory tree of a repository into many catalogs. 
-Repository maintainers are responsible for sensible cutting of the directory trees into nested catalogs. 
+With nested catalogs, \cvmfs\ has a mechanism to partition the directory tree of a repository into many catalogs.
+Repository maintainers are responsible for sensible cutting of the directory trees into nested catalogs.
 They can do so by creating and removing the magic file \texttt{.cvmfscatalog}.
 
 For example, in order to create a nested catalog for software release 1.0 in the hypothetical repository experiment.cern.ch, do
@@ -281,13 +324,13 @@ touch /cvmfs/experiment.cern.ch/software/1.0/.cvmfscatalog
 cvmfs_server publish
 \end{verbatim}
 
-If you want to merge a nested catalog with its parent catalog, remove the corresponding \texttt{.cvmfscatalog} file. 
+If you want to merge a nested catalog with its parent catalog, remove the corresponding \texttt{.cvmfscatalog} file.
 Nested catalogs can be nested on arbitrary many levels.
 
 \subsection{Recommendations for Nested Catalogs}
 \label{sct:nestedcatalogrecommendations}
-Nested catalogs should be created having in mind which files and directories are accessed together. 
-This is typically the case for software releases, but can be also on the directory level that separates platforms. 
+Nested catalogs should be created having in mind which files and directories are accessed together.
+This is typically the case for software releases, but can be also on the directory level that separates platforms.
 For instance, for a directory layout like
 \begin{verbatim}
 /cvmfs/experiment.cern.ch
@@ -298,9 +341,9 @@ For instance, for a directory layout like
   |    `    |- common
   |    |- /x86_64
   |    |    |- 1.0
-  |    `    |- common  
+  |    `    |- common
   |- /grid-certificates
-  |- /scripts 
+  |- /scripts
 \end{verbatim}
 it makes sense to have nested catalogs at
 \begin{verbatim}
@@ -308,27 +351,27 @@ it makes sense to have nested catalogs at
 /cvmfs/experiment.cern.ch/software/x86_64
 /cvmfs/experiment.cern.ch/software/i686/1.0
 /cvmfs/experiment.cern.ch/software/i686/2.0
-/cvmfs/experiment.cern.ch/software/x86_64/1.0 
+/cvmfs/experiment.cern.ch/software/x86_64/1.0
 \end{verbatim}
 
-A nested catalog at the top level of each software package release is generally the best approach because once package releases are installed they tend to never change, which reduces churn and garbage generated in the repository from old catalogs that have changed. 
+A nested catalog at the top level of each software package release is generally the best approach because once package releases are installed they tend to never change, which reduces churn and garbage generated in the repository from old catalogs that have changed.
 In addition, each run only tends to access one version of any package so having a separate catalog per version avoids loading catalog information that will not be used.
 A nested catalog at the top level of each platform may make sense if there is a significant number of platform-specific files that aren't included in other catalogs.
 
-It could also make sense to have a nested catalog under grid-certificates, if the certificates are updated much more frequently than the other directories. 
+It could also make sense to have a nested catalog under grid-certificates, if the certificates are updated much more frequently than the other directories.
 It would not make sense to create a nested catalog under /cvmfs/experiment.cern.ch/software/i686/common, because this directory needs to be accessed anyway whenever its parent directory is needed.
 As a rule of thumb, a single file catalog should contain more than 1000 files and directories but not contain more than $\approx$200\,000 files.
 Section~\ref{sct:inspectnestedcatalogs} describes how to find catalogs that do not satisfy this recommendation.
 
-Restructuring the repository's directory tree is an expensive operation in CernVM-FS. 
-Moreover, it can easily break client applications when they switch to a restructured file system snapshot. 
+Restructuring the repository's directory tree is an expensive operation in CernVM-FS.
+Moreover, it can easily break client applications when they switch to a restructured file system snapshot.
 Therefore, your software directory tree layout should be relatively stable before you start filling the CernVM-FS repository.
 
 \subsection{Managing Nested Catalogs with \texttt{.cvmfsdirtab}}
-Rather than managing \texttt{.cvmfscatalog} files by hand, a repository administrator may create a file called \texttt{.cvmfsdirtab}, in the top directory of the repository, which contains a list of paths relative to the top of the repository where \texttt{.cvmfscatalog} files will be created. 
+Rather than managing \texttt{.cvmfscatalog} files by hand, a repository administrator may create a file called \texttt{.cvmfsdirtab}, in the top directory of the repository, which contains a list of paths relative to the top of the repository where \texttt{.cvmfscatalog} files will be created.
 Those paths may contain shell wildcards such as asterisk (\texttt{*}) and question mark (\texttt{?}).
-This is useful for specifying patterns for creating nested catalogs as new files are installed. 
-A very good use of the patterns is to identify directories where software releases will be installed.  
+This is useful for specifying patterns for creating nested catalogs as new files are installed.
+A very good use of the patterns is to identify directories where software releases will be installed.
 
 In addition, lines in \texttt{.cvmfsdirtab} that begin with an exclamation point (\texttt{!}) are shell patterns that will be excluded from those matched by lines without an exclamation point.
 For example a \texttt{.cvmfsdirtab} might contain these lines for the repository of the previous subsection:
@@ -344,7 +387,7 @@ This will create nested catalogs at
 /cvmfs/experiment.cern.ch/software/i686/1.0
 /cvmfs/experiment.cern.ch/software/i686/2.0
 /cvmfs/experiment.cern.ch/software/x86_64
-/cvmfs/experiment.cern.ch/software/x86_64/1.0 
+/cvmfs/experiment.cern.ch/software/x86_64/1.0
 /cvmfs/experiment.cern.ch/grid-certificates
 \end{verbatim}
 Note that unlike the regular lines that add catalogs, asterisks in the exclamation point exclusion lines can span the slashes separating directory levels.
@@ -378,7 +421,7 @@ After \texttt{cvmfs\_server migrate} has successfully updated all file catalogs 
 
 \section{Limitations on Repository Content}
 Because \cvmfs\ provides what appears to be a POSIX filesystem to clients, it is easy to think that it is a general purpose filesystem and that it will work well with all kinds of files.
-That is not the case, however, because \cvmfs\ is optimized for particular types of files and usage.  
+That is not the case, however, because \cvmfs\ is optimized for particular types of files and usage.
 This section contains guidelines for limitations on the content of repositories for best operation.
 
 \subsection{Data files}
@@ -397,7 +440,7 @@ Of course, if you have a special arrangement with particular sites to have large
 Web proxies may also need to be engineered with faster disks if the data causes their cache hit ratios to be reduced.
 
 Also, keep in mind that the total amount of data distributed is not unlimited.
-The files are stored and distributed compressed, and files with the same content stored in multiple places in the same repository are collapsed to the same file in storage, but the storage space is used not only on the original repository server, it is also replicated onto multiple Stratum 1 servers. 
+The files are stored and distributed compressed, and files with the same content stored in multiple places in the same repository are collapsed to the same file in storage, but the storage space is used not only on the original repository server, it is also replicated onto multiple Stratum 1 servers.
 Generally if only executable code is distributed, there is no problem with the space taken on Stratum 1s, but if many large data files are distributed they may exceed the Stratum 1
 storage capacity.
 Data files also tend to not compress as well, and that is especially the case of course if they are already compressed before installation.
@@ -435,6 +478,6 @@ If there might be any such hardlinks in a repository, set the option
 \begin{verbatim}
     CVMFS_IGNORE_XDIR_HARDLINKS=true
 \end{verbatim}
-in the repository's \texttt{server.conf}. 
+in the repository's \texttt{server.conf}.
 The file will not appear to be hardlinked to the client, but it will still be stored as only one file in the repository just like any other files that have identical content.
 Note that if, in a subsequent publish operation, you change only one of these cross-directory hardlinks, the other hardlinks remain unchanged (the hardlink got ``broken'').
