--- a/figures/tabparameters.tex
+++ b/figures/tabparameters.tex
@@ -25,6 +25,7 @@
 		\tt CVMFS\_NFILES					& Maximum number of open file descriptors that can be used by the \cvmfs\ process.\\
 		\tt CVMFS\_NFS\_SOURCE				& If set to ``yes'', act as a source for the NFS daemon (NFS export).\\
 		\tt CVMFS\_NFS\_SHARED				& If set a path, used to store the NFS maps in an SQlite database, instead of the usual LevelDB storage in the cache directory.\\
+		\tt CVMFS\_PAC\_URLS				& Chain of URLs pointing to PAC files with HTTP proxy configuration information.\\
 		\tt CVMFS\_PROXY\_RESET\_AFTER		& Delay in seconds after which \cvmfs\ will retry the primary proxy group in case of a fail-over to another group.\\
 		\tt CVMFS\_PUBLIC\_KEY				& Colon-separated list of repository signing keys.\\
 		\tt CVMFS\_QUOTA\_LIMIT			& Soft-limit of the cache in Megabyte.\\
