--- a/cpt-details.tex
+++ b/cpt-details.tex
@@ -278,6 +278,12 @@ This way, the corrupted file gets replaced in the proxy server by a fresh copy f
 If you have set the \cernvm\ GUID, this GUID is also transmitted.
 %In \cernvm\ we use this header to rewrite URL's to the respective repository format for \cvmfs\ version 1 or \cvmfs\ version 2.
 
+%\subsection{Ordering of Stratum~1 Servers according to Geographic Proximity}
+%\cvmfs\ Stratum 1 servers provide a RESTful service under \url{http://<HOST>/cvmfs/<FQRN>/api/v1.0/geo}.
+%Clients can request \url{http://<HOST>/cvmfs/<FQRN>/api/v1.0/geo/<proxy address as seen by cvmfs client>/<alphabetical list of stratums separated by comma>}.
+%The list of proxy addresses can be replaced by a UUID if no proxies are used.
+%The result is an ordered list of indexes of the input host names.
+
 \section{Name Resolving}
 Round-robin DNS entries for proxy servers are treated specially by \cvmfs.
 Multiple IP addresses for the same proxy name are automatically transformed into multiple proxy servers within the same load-balance group.
@@ -477,6 +483,8 @@ There are two supported attributes:
 		Shows the SHA-1 hash of a regular file as listed in the file catalog.
 	\item[host]
 		Shows the currently active HTTP server.
+	\item[host]
+		Shows the ordered list of HTTP servers.
 	\item[lhash]
 		Shows the SHA-1 hash of a regular file as stored in the local cache, if available.
 	\item[maxfd]
