--- a/figures/tabparameters.tex
+++ b/figures/tabparameters.tex
@@ -41,8 +41,9 @@
 		\tt CVMFS\_TIMEOUT 				& Timeout in seconds for HTTP requests with a proxy server.\\
 		\tt CVMFS\_TIMEOUT\_DIRECT 		& Timeout in seconds for HTTP requests without a proxy server.\\
 		\tt CVMFS\_TRACEFILE				& If set, enables the tracer and trace file system calls to the given file.\\
-		\tt CVMFS\_USER						& Sets the \texttt{gid} and \texttt{uid} mount options. Don't touch or overwrite.\\
-		\tt CVMFS\_USYSLOG					& All messages that normally are logged to syslog are re-directed to the given file.  This file can grow up to \SI{500}{\kilo\byte} and there is one step of log rotation.  Required for $\mu$CernVM.\\
+		\tt CVMFS\_USE\_GEOAPI			& Request order of Stratum 1 servers via Geo-API\\
+		\tt CVMFS\_USER					& Sets the \texttt{gid} and \texttt{uid} mount options. Don't touch or overwrite.\\
+		\tt CVMFS\_USYSLOG				& All messages that normally are logged to syslog are re-directed to the given file.  This file can grow up to \SI{500}{\kilo\byte} and there is one step of log rotation.  Required for $\mu$CernVM.\\
 		\bottomrule
 	\end{longtable}
 %\end{longtable}
