update documentation according to CVM-678

--- a/figures/tabparameters.tex
+++ b/figures/tabparameters.tex
@@ -10,6 +10,7 @@
 		\tt CVMFS\_BACKOFF\_MAX			& Maximum backoff in seconds when retrying to download data.\\
 		\tt CVMFS\_CACHE\_BASE				& Location (directory) of the \cvmfs\ cache.\\
 		\tt CVMFS\_CHECK\_PERMISSIONS		& If set to ``no'', disable checking of file ownership and permissions (open all files).\\
+		\tt CVMFS\_CLAIM\_OWNERSHIP		& If set to ``yes'', allows \cvmfs\ to claim ownership of files and directories.\\
 		\tt CVMFS\_DEBUGLOG				& If set, run \cvmfs\ in debug mode and write a verbose log the the specified file.\\
 		\tt CVMFS\_DEFAULT\_DOMAIN			& The default domain will be automatically appended to repository names when given without a domain.\\
 		\tt CVMFS\_HOST\_RESET\_AFTER		& See \texttt{CVMFS\_PROXY\_RESET\_AFTER}.\\
